[metadata]
name = pyfeasst
version = 0.0.2
author = Harold Wickes Hatch
author_email = harold.hatch@nist.gov
description = A Python package to analyze FEASST simulation results.
long_description = Analyze FEASST simulation results. See https://doi.org/10.18434/M3S095 for more information on FEASST. And within the FEASST documentation, you may find pyfeasst documentation: https://pages.nist.gov/pyfeasst/README.html.
url = https://doi.org/10.18434/M3S095
project_urls =
    #Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
